@@ -436,6 +436,11 @@
                     "brams": 0,
                     "sliceLUTs": 0,
                     "data": {
+                        "base_v1": {
+                            "processors": 0,
+                            "brams": 0,
+                            "sliceLUTs": 581
+                        },
                         "hh_ele_v1": {
                             "processors": 0,
                             "brams": 0,
