@@ -9,6 +9,9 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [2.19.0] - 2024-04-16
 
+### Added
+- TOPO model "base_v1" in resource_default.json.
+
 ### Removed 
 - unused templates (anomaly_detection.vhd and topo_trigger.vhd).
 
